brat/test/golden/error/simpleterm.brat.golden
Error in test/golden/error/simpleterm.brat@FC {start = Pos {line = 2, col = 10}, end = Pos {line = 2, col = 14}}:
simple = true
         ^^^^

  "true" is not a valid constructor for type Nat

